Add async NUT client, MQTT integration, and Quartz jobs
- Refactored NUTDotNetClient to use async/await throughout for improved scalability.
- Added models for UPS status, NUT/MQTT settings, and announce payloads.
- Implemented NutUpsStatus enum and helper/extensions for status parsing and formatting.
- Introduced MQTT client service (using MQTTnet) for publishing UPS status, heartbeats, and handling commands.
- Added NutUPSClientService as a hosted service for NUT server connection and status retrieval.
- Integrated Quartz for scheduled UPS status polling and MQTT publishing.
- Updated Program.cs for DI, configuration binding, and Quartz setup.
- Extended appsettings.json for NUT, MQTT, and polling interval configuration.
- Added required NuGet packages for MQTTnet, Quartz, and options validation.
- Improved error handling, logging, and configuration validation.

--- a/pinutmqtt/appsettings.json
+++ b/pinutmqtt/appsettings.json
@@ -8,5 +8,16 @@
         "Program": "Information"
       }
     }
+  },
+  "NUT": {
+    "Host": "localhost",
+    "Port": 3493,
+    "UPSName": "ups"
+  },
+  "MQTT": {
+    "Server": "localhost",
+    "Port": 1883,
+    "ClientId": "upsnut1",
+    "Topic": "nutups"
   }
 }
