--- a/pinutmqtt/appsettings.Development.json
+++ b/pinutmqtt/appsettings.Development.json
@@ -7,5 +7,18 @@
         "Pinutmqtt": "Debug"
       }
     }
-  }
+  },
+  "NUT": {
+    "Host": "192.168.1.252",
+    "Port": 3493,
+    "UPSName": "ups",
+    "RealPowerNominelWatts": 480.0
+  },
+  "MQTT": {
+    "Server": "localhost",
+    "Port": 1883,
+    "ClientId": "upsnut1",
+    "Topic": "nutups"
+  },
+  "UPSReadIntervalSeconds": 10
 }
