--- a/pinutmqtt/appsettings.Development.json
+++ b/pinutmqtt/appsettings.Development.json
@@ -11,8 +11,8 @@
   "NUT": {
     "Host": "192.168.1.252",
     "Port": 3493,
-    "UPSName": "ups",
-    "RealPowerNominelWatts": 480.0
+    "UPSName": "ups"
+    //"RealPowerNominelWatts": 480.0
   },
   "MQTT": {
     "Server": "localhost",
@@ -20,5 +20,5 @@
     "ClientId": "upsnut1",
     "Topic": "nutups"
   },
-  "UPSReadIntervalSeconds": 10
+  "UPSReadIntervalSeconds": 5
 }
